# ccg_card_id

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  README.md  overnight_training.sh  pyproject.toml  requirements.txt  run_pipeline.sh  setup.py  update_pipeline.sh
.venv312/: pyvenv.cfg
01_data_sources/pokemontcgio/: 01_sync_data.py  02_build_card_db.py  02_sync_images.py  03_sync_images.py  04_build_manifest.py
01_data_sources/scryfall/: 01_sync_data.py  02_build_card_db.py  02_sync_images.py  03_prioritize_data.py  03_sync_images.py  04_build_card_db.py  regular_update.sh
01_data_sources/tcgplayer/: README.md
02_data_sets/: readme.md
02_data_sets/munchie/: readme.md
02_data_sets/packopening/: README.md  plst_by_host_set.json  top20_reprints.csv
02_data_sets/sol_ring/: readme.md
03_detector/: base.py  readme.md  research_prompt.md
03_detector/detectors/: __init__.py  canny_poly.py  sift_homography.py
03_detector/eval/: benchmark.py  metrics.py  two_stage_test.py  visualize_corners.py  visualize_corners_224.py
03_detector/tests/: test_geometry.py
04_build/mobilevit_xxs/: 01_build_manifest.py  02_train.py  02_train_arcface.py  03_build_local_real_manifest.py  03_eval_retrieval.py  03_train_multitask.py  04_build_triplets.py  04_eval_retrieval.py  05_compare_models.py  README.md  data.py  eval_retrieval.py  mining.py  models.py  retrieval.py  train_arcface.py  triplets.py
04_vectorize/: hash_quality_analysis.py  precache_packopening_aligned.py  readme.md  research_prompt.md
04_vectorize/brief/: readme.md
04_vectorize/dinov2/: 01_build_vectors.py  readme.md
04_vectorize/mobilevit_xxs/: 01_build_manifest.py  02_train.py  03_train_multitask.py  README.md  retrieval.py
04_vectorize/phash/: 01_build_vectors.py  baseline_accuracy_report.md  readme.md
05_build/: 01_precompute_mobilevit_vectors.py  02_update_gallery_vectors.py  readme.md
05_lookup_db/: 01_precompute_mobilevit_vectors.py  02_update_gallery_vectors.py  readme.md
06_eval/: 01_eval_retrieval.py  02_eval_dinov2.py  03_consolidate_reports.py  04_eval_mobilevit_xxs.py  05_eval_ximilar.py  generate_top20_coverage.py  precache_gallery.py  readme.md  reporting.py  top20_illustration_coverage.csv  ximilar_eval_report.md  ximilar_eval_results.csv
07_phase2/: 01_build_manifest.py  02_train_arcface.py  03_eval_retrieval.py  05_compare_models.py  README.md
07_phase2/phase2/: __init__.py  data.py  eval_retrieval.py  mining.py  models.py  train_arcface.py
07_web_scanner/: README.md
07_web_scanner/client/: index.html  scanner.js  style.css
07_web_scanner/server/: app.py  card_lookup.py  populate_prices.py  requirements.txt  search.py
08_quant/: benchmark.py  export_onnx.py  quantize_int8.py  requirements.txt
08_quant/data/: .gitignore  README.md
09_grading/centering/: concept.md
ccg_card_id/: __init__.py  catalog.py  config.py  pokemon_catalog.py  project_settings.py
ccg_card_id/benchmark/: __init__.py  tasks.py
docs/: 00_welcome.md  01_accuracy_what_do_you_mean.md  02_not_all_pixels_equal.md  03_multitask_curriculum_and_backbone_shortlist.md  04_vectorize_part2_edge_deployment.md  05_phase1a_runbook.md  embedding-model-survey.md  mobilevit_xxs_analysis_2026-03-16.md  phase2_data_plan.md  results_2025_12_20.md
scripts/: download_dataset.py  finetune_dinov2.py  test_dinov2.py  test_phash.py
tests/: __init__.py  test_models.py  test_utils.py
(+55 files in other folders)
