[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ccg_card_id"
version = "0.1.0"
description = "Pipeline for visual identification of collectible card game cards"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.14"
dependencies = [
    "tqdm",
    "requests",
    "Pillow",
    "imagehash",
    "numpy",
    "opencv-contrib-python",
    "orjson",
]

[tool.uv.sources]
ClintUtils = { path = "../ClintUtils", editable = true }

[project.optional-dependencies]
dinov2 = [
    "torch",
    "transformers",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ccg_card_id*"]

[tool.ruff]
line-length = 100
target-version = "py310"
